<resources>
    <string name="app_name">Tasks Manager</string>

    <string name="create_task">Create Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="update_task">Update Task</string>
    <string name="view_tasks">View Tasks</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="start_date">From</string>
    <string name="due_date">To</string>

    <string name="search">Search..</string>

    <string name="empty_task_list">No tasks added yet</string>
    <string name="empty_title">Title shouldn\'t be empty</string>
    <string name="empty_description">Description shouldn\'t be empty</string>
    <string name="empty_start_date">From date shouldn\'t be empty</string>
    <string name="empty_due_date">To date shouldn\'t be empty</string>
    <string name="generic_error">Ups, something went wrong</string>

    <string name="dialog_delete_task">Are you sure you want to remove this task?</string>
    <string name="dialog_delete_all_tasks">Are you sure you want to remove all the tasks?</string>
    <string name="close">close</string>

    <string name="is_completed">Mark as Completed</string>

    <string name="action_delete">delete</string>
    <string name="action_delete_all">delete all</string>
</resources>