<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.blackbox_vision.helpers.ui.fragment.AddTaskFragment"
    tools:showIn="@layout/activity_add_task">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/titleInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            app:counterEnabled="true"
            app:counterMaxLength="30">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/titleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="30"
                android:hint="@string/title"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/descriptionInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleInputLayout"
            app:counterEnabled="true"
            app:counterMaxLength="140">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:scrollbars="vertical"
                android:inputType="text"
                android:maxLength="140"
                android:hint="@string/description"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/startDateInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/descriptionInputLayout">

            <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
                android:id="@+id/startDateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textIsSelectable="true"
                android:hint="@string/start_date"
                app:minDate="01/01/1981"
                app:maxDate="01/01/2050"
                app:dateFormat="dd/MM/yyyy"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dueDateInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/startDateInputLayout">

            <io.blackbox_vision.datetimepickeredittext.view.DatePickerInputEditText
                android:id="@+id/dueDateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textIsSelectable="true"
                android:hint="@string/due_date"
                app:minDate="01/01/1981"
                app:maxDate="01/01/2050"
                app:dateFormat="dd/MM/yyyy"/>

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/isCompletedCheckbox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/dueDateInputLayout"
            android:text="@string/is_completed"/>

        <Button
            android:id="@+id/taskButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/isCompletedCheckbox"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:theme="@style/AppTheme.ButtonStyle"
            tools:text="Create Task"/>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
